--- a/16-shadows/package.json
+++ b/16-shadows/package.json
@@ -12,13 +12,14 @@
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^6.5.0",
-    "lil-gui": "^0.11.0",
     "file-loader": "^6.2.0",
     "html-loader": "^3.0.0",
     "html-webpack-plugin": "^5.5.0",
+    "lil-gui": "^0.11.0",
     "mini-css-extract-plugin": "^2.4.3",
     "portfinder-sync": "0.0.2",
     "raw-loader": "^4.0.2",
+    "stats.js": "^0.17.0",
     "style-loader": "^3.3.1",
     "three": "^0.134.0",
     "webpack": "^5.60.0",
